kubernetes/apps/app-cluster/productivity/convertx/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convertx-internal
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "File converter (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "http://convertx.krapulax.home"
    gethomepage.dev/icon: "mdi-file-convert"
    gethomepage.dev/name: "Convertx (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - convertx.krapulax.home
  rules:
    - backendRefs:
        - name: convertx
          namespace: productivity
          port: 3000
